--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -2,6 +2,45 @@
     background-color: $black;
     color: $white;
     width: 100%;
-    height: 400px;
+    padding: 50px 0px;
     text-align: center;
+
+    .contenedor--footer{
+        display: grid;
+    }
 }
+
+
+.footer{
+    & .legal, p, input, .button{
+        margin: 10px 0px;
+    }
+}
+
+@media only screen and (min-width: 960px){
+
+    .footer{
+        text-align: start;
+    
+        & .contenedor--footer{
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1em;
+            grid-auto-rows: auto;    
+        }
+    }
+
+    .footer__input { 
+        text-align: right;
+        
+        & p, .input, button{
+            display: inline;
+        }
+        & .input{
+            margin: 0px 15px;
+        }
+    }
+}
+
+
+
+    
