--- a/assets/sass/layout/_main-section.scss
+++ b/assets/sass/layout/_main-section.scss
@@ -1,16 +1,21 @@
+.main__section{
+    display: grid;
+}
+
 .right, .left{
     width: 95%;
-    margin: 25px auto;
+    margin: auto;
+    margin-bottom: 25px;
 }
 
 .curso{
  border: 1px dotted #5d5d5d;
- margin: 5px 0px;
- padding: 25px 0px;
+ margin: 5px auto;
+ padding: 25px 5px;
  
     & .curso__cabecera{
         width: 100%;
-        height: 100px;
+        height: 150px;
         margin: auto;
         background-size: cover;
         background-position: center;
@@ -23,6 +28,11 @@
     & h4, p, h6, .curso__icons{
         margin: 15px 0px;
     }
+}
+
+.curso__icons i{
+    display: inline;
+    margin-right: 15px;
 }
 
 .curso__cabecera--html{
@@ -52,13 +62,64 @@ background-color: #5d5d5d;
 color: $white;
 }
 
-.curso__icons{
-    display: flex;
+.curso__rrss{
+    & li a .fab{
+        color: $black;
+    }
 }
 
 .curso__rrss{
+    width: 200px;
+    margin: auto;
     text-align: center;
     display: flex;
     justify-content: center;
     font-size: $x-large;
+}
+
+.curso__lista{
+    margin-left: 25px;
+
+    & ul{
+        list-style: circle;
+    }
+}
+
+.svg__animado{
+    width: 150px;
+    display: block;
+    margin: 0 auto;
+}
+
+
+@media only screen and (min-width: 960px){
+    .main__section{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1em;
+        grid-auto-rows: auto;
+        cursor: pointer;
+    }
+    
+    .curso{
+        & .curso__cabecera{
+            width: 100%;
+            height: 200px;
+        }
+    }
+    
+    .curso__rrss{
+        & li a .far{
+            width: auto;
+        }
+    }
+    
+    .curso__rrss{
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        font-size: $x-large;
+    }
+    
+    
 }
