--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -2,6 +2,7 @@
     background-color: $black;
     color: $white;
     width: 100%;
+    margin-top: 25px;
     padding: 50px 0px;
     text-align: center;
 
