--- a/assets/sass/layout/_main-section.scss
+++ b/assets/sass/layout/_main-section.scss
@@ -100,6 +100,14 @@ color: $white;
         grid-auto-rows: auto;
         cursor: pointer;
     }
+
+    .right, .left{
+        width: 100%;
+        margin: 0px;
+        margin-bottom: 0px;
+        display: flex;
+        
+    }
     
     .curso{
         & .curso__cabecera{
