--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,42 @@ p {
   clear: both;
 }
 
+.svg__animado {
+  width: 250px;
+  display: block;
+  margin: 0 auto;
+}
+
+#icon_animacion {
+  transform: translateX(25%);
+  animation: horizontal 3s infinite;
+}
+
+@keyframes horizontal {
+  50% {
+    transform: unset;
+  }
+  100% {
+    transform: translateX(25%);
+  }
+}
+.rotacion {
+  animation: giro 3s linear infinite;
+  transform-origin: 80% 80%;
+}
+
+@keyframes giro {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/* @keyframes giro{
+    100%{transform: rotate(360deg);}
+
+} */
 .header {
   background-color: #000000;
   height: 80px;
@@ -138,6 +174,10 @@ p {
   color: #ffffff;
 }
 
+.curso--left {
+  border: none;
+}
+
 .curso__rrss li a .fab {
   color: #000000;
 }
@@ -156,12 +196,6 @@ p {
 }
 .curso__lista ul {
   list-style: circle;
-}
-
-.svg__animado {
-  width: 150px;
-  display: block;
-  margin: 0 auto;
 }
 
 @media only screen and (min-width: 960px) {
@@ -316,24 +350,21 @@ p {
   transform: translateX(0%);
 }
 
-/* .banner{
-    width: 100%;
-    height: 200px;
-    background-image: url('../img/desarrolloweb2021t.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-} */
 .banner {
   width: 100%;
-  height: 400px;
+  height: 200px;
   background-image: url("../img/desarrolloweb2021t.svg");
-  background-size: auto;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 @media only screen and (min-width: 960px) {
+  .banner {
+    height: 400px;
+    background-size: auto;
+  }
+
   .burger {
     display: none;
   }
