--- a/assets/sass/layout/_main-section.scss
+++ b/assets/sass/layout/_main-section.scss
@@ -61,6 +61,9 @@
 background-color: #5d5d5d;
 color: $white;
 }
+.curso--left{
+    border: none;
+}
 
 .curso__rrss{
     & li a .fab{
@@ -84,13 +87,6 @@ color: $white;
         list-style: circle;
     }
 }
-
-.svg__animado{
-    width: 150px;
-    display: block;
-    margin: 0 auto;
-}
-
 
 @media only screen and (min-width: 960px){
     .main__section{
