--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'base/grid';
 @import 'base/reset';
 @import 'base/typography';
+@import 'base/animacion';
 //Layout
 @import 'layout/header';
 @import 'layout/main-section';
